--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,6 @@
 {
-  "parser": "@typescript-eslint/parser",
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
     "plugin:import/recommended",
     "plugin:import/typescript"
@@ -12,39 +10,29 @@
     "sourceType": "module"
   },
   "rules": {
-    "import/extensions": ["error", "ignorePackages"],
+    "import/extensions": [
+      "error",
+      "ignorePackages"
+    ],
     "import/no-unresolved": "off",
-    "require-await": "error",
-    "@typescript-eslint/explicit-member-accessibility": "error",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/naming-convention": [
+    "import/order": [
       "error",
       {
-        "selector": ["interface"],
-        "format": ["PascalCase"],
-        "custom": {
-          "regex": "^I[A-Z]",
-          "match": true
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
         }
-      },
-      {
-        "selector": ["method"],
-        "format": ["camelCase"],
-        "modifiers": ["static"]
-      },
-      {
-        "selector": ["variable"],
-        "format": ["UPPER_CASE"],
-        "modifiers": ["static", "readonly"]
       }
-    ],
-    "import/order": ["error", {"alphabetize": {"order": "asc", "caseInsensitive": true}}]
+    ]
   },
   "overrides": [
     {
-      "files": ["*.ts", "*.mts", "*.cts", "*.tsx"],
+      "files": [
+        "*.js",
+        "*.mjs",
+        "*.cjs"
+      ],
       "rules": {
-        "@typescript-eslint/explicit-function-return-type": "error"
       }
     }
   ],
