--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint:fix": "eslint \"./**/*.mjs\" --fix"
   },
   "dependencies": {
-    "@alphabill/alphabill-js-sdk": "0.5.0-rc.7a86c8e",
-    "@noble/hashes": "^1.4.0"
+    "@alphabill/alphabill-js-sdk": "0.5.0-rc1-rc.e9dd12d"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
