--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alphabill/alphabill-js-sdk-examples",
-  "version": "0.5.0",
+  "version": "1.0.0-rc1",
   "description": "Examples for Alphabill JS SDK",
   "type": "module",
   "scripts": {
@@ -8,7 +8,7 @@
     "lint:fix": "eslint \"./**/*.mjs\" --fix"
   },
   "dependencies": {
-    "@alphabill/alphabill-js-sdk": "0.5.0-rc1-rc.e9dd12d"
+    "@alphabill/alphabill-js-sdk": "^1.0.0-rc1-rc.371335f"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
