--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "eslint \"./**/*.mjs\" --fix"
   },
   "dependencies": {
-    "@alphabill/alphabill-js-sdk": "^1.0.0-rc1-rc.371335f"
+    "@alphabill/alphabill-js-sdk": "1.0.0-rc1-rc.525d443"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
