--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "lint:fix": "eslint \"./**/*.mjs\" --fix"
   },
   "dependencies": {
-    "@alphabill/alphabill-js-sdk": "1.0.0-rc1-rc.0b761ab"
+    "@alphabill/alphabill-js-sdk": "1.0.0-b13f7ce-rc.661b72e"
   },
   "devDependencies": {
-    "@eslint/js": "9.23.0",
-    "eslint": "9.23.0",
-    "eslint-config-prettier": "10.1.1",
+    "@eslint/js": "9.25.0",
+    "eslint": "9.25.0",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-prettier": "5.2.6",
     "globals": "16.0.0",
     "prettier": "3.5.3"
   }
